--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                       </ul>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost text-4xl font-Manrope font-extrabold mr-24">Hockey<span class="text-[#FF4240]">’</span>s</a>
+                  <a class="btn btn-ghost text-[24px] lg:text-[36px] font-[Manrope] font-extrabold ">Hockey<span class="text-[#FF4240]">’</span>s</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal font-Manrope font-normal text-[#424247] px-1">
+                  <ul class="menu menu-horizontal text-[16px] font-[Manrope] font-normal text-[#424247] px-1">
                     <li><a>Home</a></li>
                     <li><a>About</a></li>
                     <li><a>Pages</a></li>
@@ -54,13 +54,52 @@
                     <li><a>Contact</a></li>
                   </ul>
                 </div>
-                <div class="navbar-end gap-6 ">
-                    <img class="hidden lg:flex " src="Images/search-icon.svg" alt="search-icon">
-                  <a class="btn w-[148px] text-white text-[20px] bg-[#FF4240] items-center py-[15px] px-6">Get Ticket</a>
+                <div class="navbar-end">
+                    <img class="hidden lg:flex" src="Images/search-icon.svg" alt="search-icon">
+                  <a class="btn w-auto lg:w-[148px] text-white ml-[24px] font-[Manrope] font-bold text-[18px] lg:text-[20px] bg-[#FF4240] items-center">Get Ticket</a>
                 </div>
               </div>
         </nav>
         <!-- navigation bar section end  -->
+
+         <!-- hero section start  -->
+         <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
+            <div class="carousel w-full rounded-2xl">
+                <div id="slide1" class="carousel-item relative w-full">
+                  <img src="Images/1.png" class="w-full h-[650px]" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle border-none bg-[#131318] text-white">❮</a> 
+                    <a href="#slide2" class="btn btn-circle border-none bg-[#131318] text-white">❯</a>
+                  </div>
+                </div> 
+                <div id="slide2" class="carousel-item relative w-full">
+                  <img src="Images/2.png" class="w-full h-[650px]" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle border-none bg-[#131318] text-white">❮</a> 
+                    <a href="#slide3" class="btn btn-circle border-none bg-[#131318] text-white">❯</a>
+                  </div>
+                </div> 
+                <div id="slide3" class="carousel-item relative w-full">
+                  <img src="Images/3.png" class="w-full h-[650px]" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle border-none bg-[#131318] text-white">❮</a> 
+                    <a href="#slide4" class="btn btn-circle border-none bg-[#131318] text-white">❯</a>
+                  </div>
+                </div> 
+                <div id="slide4" class="carousel-item relative w-full">
+                  <img src="Images/4.png" class="w-full h-[650px]" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle border-none bg-[#131318] text-white">❮</a> 
+                    <a href="#slide1" class="btn btn-circle border-none bg-[#131318] text-white">❯</a>
+                  </div>
+                </div>
+              </div>
+               <div class="meet-heros-section flex-col absolute w-[335px] px-5 my-12 lg:w-[566px] mx-auto bg-[#131318] rounded-2xl p-8 lg:-translate-y-[230px] lg:translate-x-[880px]">
+                <h1 class="meet-heros-title w-auto font-[Manrope] font-extrabold text-white lg:text-2xl">Meet all the heroes from the field</h1>
+                <p class="meet-heros-paragraph w-auto lg:w-[502px] text-[14px] py-4 text-[#FFFFFF99] lg:text-[16px] font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p> 
+              </div> 
+        </section>
+
 
 
     </header>
