professional hokey club section added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal text-[16px] font-[Manrope] font-normal text-[#424247] px-1">
-                    <li><a>Home</a></li>
+                    <li><a class="text-[#FF4240]">Home</a></li>
                     <li><a>About</a></li>
                     <li><a>Pages</a></li>
                     <li><a>Blog</a></li>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="navbar-end">
                     <img class="hidden lg:flex" src="Images/search-icon.svg" alt="search-icon">
-                  <a class="btn w-auto lg:w-[148px] text-white ml-[24px] font-[Manrope] font-bold text-[18px] lg:text-[20px] bg-[#FF4240] items-center">Get Ticket</a>
+                  <a class="btn w-auto lg:w-[148px] text-white lg:ml-[24px] font-[Manrope] font-bold text-[18px] lg:text-[20px] bg-[#FF4240] items-center">Get Ticket</a>
                 </div>
               </div>
         </nav>
@@ -94,16 +94,49 @@
                   </div>
                 </div>
               </div>
-               <div class="meet-heros-section flex-col absolute w-[335px] px-5 my-12 lg:w-[566px] mx-auto bg-[#131318] rounded-2xl p-8 lg:-translate-y-[230px] lg:translate-x-[880px]">
+               <div class="meet-heros-section flex-col relative lg:absolute w-[335px] px-5 my-12 lg:w-[566px] mx-auto bg-[#131318] rounded-2xl p-8 lg:-translate-y-[260px] lg:translate-x-[650px]">
                 <h1 class="meet-heros-title w-auto font-[Manrope] font-extrabold text-white lg:text-2xl">Meet all the heroes from the field</h1>
                 <p class="meet-heros-paragraph w-auto lg:w-[502px] text-[14px] py-4 text-[#FFFFFF99] lg:text-[16px] font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p> 
               </div> 
         </section>
-
-
-
+        <!-- hero section end  -->
     </header>
+    <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+        <hr class="h-[1px] border-dashed bg-#13131833"> 
+    </div>
     <main>
+        <!-- professional hokey club section start  -->
+        <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
+            <div class="justify-center text-center items-center">
+            <h1 class="text-[#131318] lg:text-[36px] font-[Manrope] font-extrabold ">Professional Hockeys Club</h1>
+            <p class="w-[292px] mt-6 ml-[330px] lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat<br>dolor. Purus urna in sit nullam proin.</p>
+            </div>
+            <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+               <div class="flex justify-between"> 
+                <div class="">
+                <div class="radial-progress text-red-500" style="--value:87;" role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold">87%</span></div>
+                <h1 class="">Training Ground</h1>
+                <p class="">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            </div>
+            <div class="">
+                <div class="radial-progress text-emerald-400" style="--value:95;" role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold">95%</span></div>
+                <h1 class="">Training Ground</h1>
+                <p class="">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            </div>
+            <div class="">
+                <div class="radial-progress text-yellow-300" style="--value:80;" role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold">90%</span>
+                </div>
+                <h1 class="">Training Ground</h1>
+                <p class="">Amet consectetur. Condimentum dignissim adipiscing .</p>
+        </div>
+            <div class="">
+                <div class="radial-progress text-sky-500" style="--value:90; " role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold px-[30px] py-[41px]">80%</span></div>
+                <h1 class="">Training Ground</h1>
+                <p class="">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            </div></div>
+            </div>
+
+        </section>
 
     </main>
 
