--- a/index.html
+++ b/index.html
@@ -107,32 +107,35 @@
     <main>
         <!-- professional hokey club section start  -->
         <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
-            <div class="justify-center text-center items-center">
-            <h1 class="text-[#131318] lg:text-[36px] font-[Manrope] font-extrabold ">Professional Hockeys Club</h1>
-            <p class="w-[292px] mt-6 ml-[330px] lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat<br>dolor. Purus urna in sit nullam proin.</p>
+            <div class="justify-center items-center">
+            <h1 class="text-[#131318] text-center lg:text-[36px] font-[Manrope] font-extrabold ">Professional Hockeys Club</h1>
+            <p class="w-auto mt-6 lg:ml-[330px] text-center lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat<br>dolor. Purus urna in sit nullam proin.</p>
             </div>
             <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
-               <div class="flex justify-between"> 
-                <div class="">
+              <hr class="h-[1px] border-dashed bg-#13131833"> 
+          </div>
+            <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+               <div class="lg:flex flex-col justify-between text-center items-center gap-6"> 
+                <div class="mt-6">
                 <div class="radial-progress text-red-500" style="--value:87;" role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold">87%</span></div>
-                <h1 class="">Training Ground</h1>
-                <p class="">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                <h1 class="text-xl font-[Manrope] text-[#131318] font-semibold mt-6">Prayer Facility</h1>
+                <p class="w-[250px] text-base font-normal text-[#13131899] leading-6 mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
             </div>
-            <div class="">
+            <div class="mt-6">
                 <div class="radial-progress text-emerald-400" style="--value:95;" role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold">95%</span></div>
-                <h1 class="">Training Ground</h1>
-                <p class="">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                <h1 class="text-xl font-[Manrope] text-[#131318] font-semibold mt-6">Experienced Coach</h1>
+                <p class="w-[250px] text-base font-normal text-[#13131899] leading-6 mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
             </div>
-            <div class="">
-                <div class="radial-progress text-yellow-300" style="--value:80;" role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold">90%</span>
+            <div class="mt-6">
+                <div class="radial-progress text-yellow-300" style="--value:90;" role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold">90%</span>
                 </div>
-                <h1 class="">Training Ground</h1>
-                <p class="">Amet consectetur. Condimentum dignissim adipiscing .</p>
+                <h1 class="text-xl font-[Manrope] text-[#131318] font-semibold mt-6">Senior Player</h1>
+                <p class="w-[250px] text-base font-normal text-[#13131899] leading-6 mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
-            <div class="">
-                <div class="radial-progress text-sky-500" style="--value:90; " role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold px-[30px] py-[41px]">80%</span></div>
-                <h1 class="">Training Ground</h1>
-                <p class="">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <div class="mt-6">
+                <div class="radial-progress text-sky-500" style="--value:80; " role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold px-[30px] py-[41px]">80%</span></div>
+                <h1 class="text-xl font-[Manrope] text-[#131318] font-semibold mt-6">Training Ground</h1>
+                <p class="w-[250px] text-base font-normal text-[#13131899] leading-6 mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
             </div></div>
             </div>
 
