programs section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <!-- navigation bar section start  -->
+        <!-- navigation bar section started  -->
         <nav class="container mx-auto px-5 lg:px-30 my-12">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
@@ -60,9 +60,9 @@
                 </div>
               </div>
         </nav>
-        <!-- navigation bar section end  -->
+        <!-- navigation bar section ended  -->
 
-         <!-- hero section start  -->
+         <!-- hero section started  -->
          <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
             <div class="carousel w-full rounded-2xl">
                 <div id="slide1" class="carousel-item relative w-full">
@@ -99,23 +99,23 @@
                 <p class="meet-heros-paragraph w-auto lg:w-[502px] text-[14px] py-4 text-[#FFFFFF99] lg:text-[16px] font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p> 
               </div> 
         </section>
-        <!-- hero section end  -->
+        <!-- hero section ended  -->
     </header>
     <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
-        <hr class="h-[1px] border-dashed bg-#13131833"> 
+      <hr class="h-[1px] border-dashed bg-#13131833"> 
     </div>
     <main>
-        <!-- professional hokey club section start  -->
+        <!-- professional hokey club section started  -->
         <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
             <div class="justify-center items-center">
             <h1 class="text-[#131318] text-center lg:text-[36px] font-[Manrope] font-extrabold ">Professional Hockeys Club</h1>
             <p class="w-auto mt-6 lg:ml-[330px] text-center lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat<br>dolor. Purus urna in sit nullam proin.</p>
             </div>
-            <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+          <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
               <hr class="h-[1px] border-dashed bg-#13131833"> 
           </div>
             <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
-               <div class="lg:flex flex-col justify-between text-center items-center gap-6"> 
+               <div class="lg:flex justify-between text-center items-center gap-6"> 
                 <div class="mt-6">
                 <div class="radial-progress text-red-500" style="--value:87;" role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold">87%</span></div>
                 <h1 class="text-xl font-[Manrope] text-[#131318] font-semibold mt-6">Prayer Facility</h1>
@@ -136,10 +136,66 @@
                 <div class="radial-progress text-sky-500" style="--value:80; " role="progressbar"><span class="text-black text-[28px] font-[Manrope] font-extrabold px-[30px] py-[41px]">80%</span></div>
                 <h1 class="text-xl font-[Manrope] text-[#131318] font-semibold mt-6">Training Ground</h1>
                 <p class="w-[250px] text-base font-normal text-[#13131899] leading-6 mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
-            </div></div>
             </div>
-
+          </div>
+          </div>
         </section>
+      <!-- professional hokey club section ended  -->
+
+      <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+        <hr class="h-[1px] border-dashed bg-#13131833"> 
+      </div>
+     <!-- programs section started -->
+      <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
+        <div class="justify-center items-center">
+          <h1 class="text-[#131318] text-center lg:text-[36px] font-[Manrope] font-extrabold ">Program Sections</h1>
+          <p class="w-auto mt-6 lg:ml-[330px] text-center lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+
+        <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+          <hr class="h-[1px] border-dashed bg-#13131833"> 
+        </div>
+
+       <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+        <div class="container w-auto lg:flex gap-6 justify-between mx-auto lg:px-30 my-12">
+          <div class="card w-1/2 bg-base-100 placeholder:
+           shadow-xl image-full">
+            <figure><img class="w-full" src="Images/2.png" alt="Junior Program" /></figure>
+            <div class="card-body ml-10">
+              <h2 class="card-title text-[28px] font-[Manrope] text-[#FFF] font-extrabold mt-24">Junior Program</h2>
+              <p class="w-[width:485px] mr-[42px] text-[16px] font-[Manrope] text-[#FFF] font-medium mt-6 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <div class="card-actions justify-start">
+                <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-10">Register Now!</button>
+              </div>
+            </div>
+          </div>
+          <div class="card w-1/2 ml-6 bg-base-100 shadow-xl image-full">
+            <figure><img class="w-full" src="Images/3.png" alt="Teenager Program" /></figure>
+            <div class="card-body ml-10">
+              <h2 class="card-title text-[28px] font-[Manrope] text-[#FFF] font-extrabold mt-24">Teenager Program</h2>
+              <p class="w-[width:480px] mr-[42px] text-[16px] font-[Manrope] text-[#FFF] font-medium mt-6 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <div class="card-actions justify-start">
+                <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-10">Register Now!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+         <div class="card w-auto h-[450px] bg-base-100 shadow-xl image-full">
+          <figure><img class="w-[100%] h-[450px]" src="Images/4.png" alt="Professional Program" /></figure>
+          <div class="card-body ml-10">
+            <h2 class="card-title mt-[200px] text-[28px] font-[Manrope] text-[#FFF] font-extrabold">Professional Program</h2>
+            <p class="w-[520px] mr-[38px] text-[16px] font-[Manrope] text-[#FFF] font-medium my-4 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <div class="card-actions justify-start">
+              <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-10">Register Now!</button>
+            </div>
+          </div>
+        </div> 
+       </div>
+
+      </section>
 
     </main>
 
