our new product section added

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         <hr class="h-[1px] border-dashed bg-#13131833"> 
       </div>
      <!-- programs section started -->
-      <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
+      <!-- <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
         <div class="justify-center items-center">
           <h1 class="text-[#131318] text-center lg:text-[36px] font-[Manrope] font-extrabold ">Program Sections</h1>
-          <p class="w-auto mt-6 lg:ml-[330px] text-center lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+          <p class="w-auto mt-6 text-center lg:ml-[330px] lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
 
         <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
@@ -158,44 +158,156 @@
 
        <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
         <div class="container w-auto lg:flex gap-6 justify-between mx-auto lg:px-30 my-12">
-          <div class="card w-1/2 bg-base-100 placeholder:
+          <div class="card w-[335px] lg:w-1/2 h-[244px] bg-[#13131280] placeholder:
            shadow-xl image-full">
             <figure><img class="w-full" src="Images/2.png" alt="Junior Program" /></figure>
             <div class="card-body ml-10">
               <h2 class="card-title text-[28px] font-[Manrope] text-[#FFF] font-extrabold mt-24">Junior Program</h2>
-              <p class="w-[width:485px] mr-[42px] text-[16px] font-[Manrope] text-[#FFF] font-medium mt-6 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              <p class="pr-[38px] text-[16px] font-[Manrope] text-[#FFF] font-medium mt-4 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                 enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
               <div class="card-actions justify-start">
-                <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-10">Register Now!</button>
+                <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-9">Register Now!</button>
               </div>
             </div>
           </div>
-          <div class="card w-1/2 ml-6 bg-base-100 shadow-xl image-full">
+          <div class="card w-[335px] lg:w-1/2 lg:ml-6 bg-[#13131280] shadow-xl image-full">
             <figure><img class="w-full" src="Images/3.png" alt="Teenager Program" /></figure>
             <div class="card-body ml-10">
               <h2 class="card-title text-[28px] font-[Manrope] text-[#FFF] font-extrabold mt-24">Teenager Program</h2>
-              <p class="w-[width:480px] mr-[42px] text-[16px] font-[Manrope] text-[#FFF] font-medium mt-6 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              <p class="pr-[38px] text-[16px] font-[Manrope] text-[#FFF] font-medium mt-4 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
                 enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
               <div class="card-actions justify-start">
-                <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-10">Register Now!</button>
+                <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-9">Register Now!</button>
               </div>
             </div>
           </div>
         </div>
-         <div class="card w-auto h-[450px] bg-base-100 shadow-xl image-full">
+         <div class="card w-auto lg:h-[450px] bg-[#13131280] shadow-xl image-full">
           <figure><img class="w-[100%] h-[450px]" src="Images/4.png" alt="Professional Program" /></figure>
           <div class="card-body ml-10">
             <h2 class="card-title mt-[200px] text-[28px] font-[Manrope] text-[#FFF] font-extrabold">Professional Program</h2>
             <p class="w-[520px] mr-[38px] text-[16px] font-[Manrope] text-[#FFF] font-medium my-4 leading-6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
               enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
             <div class="card-actions justify-start">
-              <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-10">Register Now!</button>
+              <button class="btn bg-[#FF4240] border-none text-[#FFF] mb-9">Register Now!</button>
             </div>
           </div>
         </div> 
        </div>
+      </section> -->
+        <!-- programs section ended -->
+        <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+          <hr class="h-[1px] border-dashed bg-#13131833"> 
+        </div>
+       
+        <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
+          <div class="justify-center items-center">
+            <h1 class="text-[#131318] text-center lg:text-[36px] font-[Manrope] font-extrabold">Our New Products</h1>
+            <p class="w-auto mt-6 lg:ml-[330px] text-center lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+          </div>
+          <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+              <hr class="h-[1px] border-dashed bg-#13131833"> 
+          </div>
+          <div class="flex flex-col lg:grid lg:grid-cols-2 gap-6">
+            <div class="card lg:card-side bg-base-100 shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:text-base duration-300">
+              <figure class="my-6 mx-6"><img src="Images/5.png" alt="Album"/></figure>
+              <div class="card-body">
+                <div class="flex ">
+                  <p class="flex justify-stretch gap-2"><img src="Images/star icon.png" alt="">5.0</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/eye icon.png" alt="">20</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/heart icon.png" alt="">200</p>
+                </div>
+                <h2 class="card-title text-xl text-[#131318] my-3 font-[Manrope] font-extrabold">World Cup Flags Football</h2>
+                <p class="w-[306px] text-base text-[#13131299] font-[Manrope] font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <div class="card-actions flex justify-between  my-3">
+                  <h2 class="text-lg text-[#FF4240] font-[Manrope] font-extrabold">Price - $22.00</h2>
+                  <p class="flex justify-stretch gap-2 ml-4 text-base text-[#13131299] font-[Manrope] font-medium"><img src="Images/shopping icon.svg" alt="shopping-icon">Delivery Fee : Free</p>
+                  </div>
+              </div>
+            </div>
+            <div class="card lg:card-side bg-base-100 shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:text-base duration-300">
+              <figure class="my-6 mx-6"><img src="Images/6.png" alt="Album"/></figure>
+              <div class="card-body">
+                <div class="flex ">
+                  <p class="flex justify-stretch gap-2"><img src="Images/star icon.png" alt="">5.0</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/eye icon.png" alt="">20</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/heart icon.png" alt="">200</p>
+                </div>
+                <h2 class="card-title text-xl text-[#131318] my-3 font-[Manrope] font-extrabold">World Cup Flags Football</h2>
+                <p class="w-[306px] text-base text-[#13131299] font-[Manrope] font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <div class="card-actions flex justify-between  my-3">
+                  <h2 class="text-lg text-[#FF4240] font-[Manrope] font-extrabold">Price - $22.00</h2>
+                  <p class="flex justify-stretch gap-2 ml-4 text-base text-[#13131299] font-[Manrope] font-medium"><img src="Images/shopping icon.svg" alt="shopping-icon">Delivery Fee : Free</p>
+                  </div>
+              </div>
+            </div>
+            <div class="card lg:card-side bg-base-100 shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:text-base duration-300">
+              <figure class="my-6 mx-6"><img src="Images/7.png" alt="Album"/></figure>
+              <div class="card-body">
+                <div class="flex">
+                  <p class="flex justify-stretch gap-2"><img src="Images/star icon.png" alt="">5.0</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/eye icon.png" alt="">20</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/heart icon.png" alt="">200</p>
+                </div>
+                <h2 class="card-title text-xl text-[#131318] my-3 font-[Manrope] font-extrabold">Cap For Hockeys</h2>
+                <p class="w-[306px] text-base text-[#13131299] font-[Manrope] font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <div class="card-actions flex justify-between  my-3">
+                  <h2 class="text-lg text-[#FF4240] font-[Manrope] font-extrabold">Price - $22.00</h2>
+                  <p class="flex justify-stretch gap-2 ml-4 text-base text-[#13131299] font-[Manrope] font-medium"><img src="Images/shopping icon.svg" alt="shopping-icon">Delivery Fee : Free</p>
+                  </div>
+              </div>
+            </div>
+            <div class="card lg:card-side bg-base-100 shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:text-base duration-300">
+              <figure class="my-6 mx-6"><img src="Images/8.png" alt="Album"/></figure>
+              <div class="card-body">
+                <div class="flex">
+                  <p class="flex justify-stretch gap-2"><img src="Images/star icon.png" alt="">5.0</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/eye icon.png" alt="">20</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/heart icon.png" alt="">200</p>
+                </div>
+                <h2 class="card-title text-xl text-[#131318] my-3 font-[Manrope] font-extrabold">World Cup Flags Football</h2>
+                <p class="w-[306px] text-base text-[#13131299] font-[Manrope] font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <div class="card-actions flex justify-between  my-3">
+                  <h2 class="text-lg text-[#FF4240] font-[Manrope] font-extrabold">Price - $22.00</h2>
+                  <p class="flex justify-stretch gap-2 ml-4 text-base text-[#13131299] font-[Manrope] font-medium"><img src="Images/shopping icon.svg" alt="shopping-icon">Delivery Fee : Free</p>
+                  </div>
+              </div>
+            </div>
+            <div class="card lg:card-side bg-base-100 shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:text-base duration-300">
+              <figure class="my-6 mx-6"><img src="Images/9.png" alt="Album"/></figure>
+              <div class="card-body">
+                <div class="flex">
+                  <p class="flex justify-stretch gap-2"><img src="Images/star icon.png" alt="">5.0</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/eye icon.png" alt="">20</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/heart icon.png" alt="">200</p>
+                </div>
+                <h2 class="card-title text-xl text-[#131318] my-3 font-[Manrope] font-extrabold">World Cup Flags Football</h2>
+                <p class="w-[306px] text-base text-[#13131299] font-[Manrope] font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <div class="card-actions flex justify-between  my-3">
+                  <h2 class="text-lg text-[#FF4240] font-[Manrope] font-extrabold">Price - $22.00</h2>
+                  <p class="flex justify-stretch gap-2 ml-4 text-base text-[#13131299] font-[Manrope] font-medium"><img src="Images/shopping icon.svg" alt="shopping-icon">Delivery Fee : Free</p>
+                  </div>
+              </div>
+            </div>
+            <div class="card lg:card-side bg-base-100 shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 hover:text-base duration-300">
+              <figure class="my-6 mx-6"><img src="Images/10.png" alt="Album"/></figure>
+              <div class="card-body">
+                <div class="flex">
+                  <p class="flex justify-stretch gap-2"><img src="Images/star icon.png" alt="">5.0</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/eye icon.png" alt="">20</p>
+                  <p class="flex justify-stretch gap-2"><img src="Images/heart icon.png" alt="">200</p>
+                </div>
+                <h2 class="card-title text-xl text-[#131318] my-3 font-[Manrope] font-extrabold">World Cup Flags Football</h2>
+                <p class="w-[306px] text-base text-[#13131299] font-[Manrope] font-medium">Dolor sit amet consectetur. Ut urna diam quis sagittis. </p>
+                <div class="card-actions flex justify-between  my-3">
+                <h2 class="text-lg text-[#FF4240] font-[Manrope] font-extrabold">Price - $22.00</h2>
+                <p class="flex justify-stretch gap-2 ml-4 text-base text-[#13131299] font-[Manrope] font-medium"><img src="Images/shopping icon.svg" alt="shopping-icon">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
 
-      </section>
+        </section>
 
     </main>
 
