client question section added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
               </div>
         </nav>
-        <!-- navigation bar section ended  -->
+        <!-- navigation bar section end  -->
 
          <!-- hero section started  -->
          <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
@@ -99,7 +99,7 @@
                 <p class="meet-heros-paragraph w-auto lg:w-[502px] text-[14px] py-4 text-[#FFFFFF99] lg:text-[16px] font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p> 
               </div> 
         </section>
-        <!-- hero section ended  -->
+        <!-- hero section end  -->
     </header>
     <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
       <hr class="h-[1px] border-dashed bg-#13131833"> 
@@ -140,7 +140,7 @@
           </div>
           </div>
         </section>
-      <!-- professional hokey club section ended  -->
+      <!-- professional hokey club section end  -->
 
       <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
         <hr class="h-[1px] border-dashed bg-#13131833"> 
@@ -195,11 +195,11 @@
         </div> 
        </div>
       </section> -->
-        <!-- programs section ended -->
+        <!-- programs section end-->
         <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
           <hr class="h-[1px] border-dashed bg-#13131833"> 
         </div>
-       
+       <!-- our new products section started  -->
         <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
           <div class="justify-center items-center">
             <h1 class="text-[#131318] text-center lg:text-[36px] font-[Manrope] font-extrabold">Our New Products</h1>
@@ -306,8 +306,86 @@
               </div>
             </div>
           </div>
+        </section>
+        <!-- our new product section end  -->
+        <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+          <hr class="h-[1px] border-dashed bg-#13131833"> 
+        </div>
+        <!-- client question section started  -->
+        <section class="container flex-col mx-auto px-5 lg:px-30 my-12">
+          <div class="justify-center items-center">
+            <h1 class="text-[#131318] text-center lg:text-[36px] font-[Manrope] font-extrabold">Our New Products</h1>
+            <p class="w-auto mt-6 lg:ml-[330px] text-center lg:w-[607px] lg:text-[16px] font-[Manrope] font-medium text-[#13131299]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+          </div>
+          <div class="container flex-col mx-auto px-5 lg:px-30 my-12">
+            <hr class="h-[1px] border-dashed bg-#13131833"> 
+          </div>
+          <div class="felx-col lg:grid lg:grid-cols-2 h-[550px] rounded-2xl border-[1px] border-[#1313181A] shadow-xl">
+            <div class="image">
+              <img class="w-[500px] h-[475px] my-8 ml-8" src="Images/11.png" alt="client-question">
+            </div>
+            <div class="my-8 -ml-14 w-[760px]">
+              <div class="join join-vertical w-full">
+                <div class="collapse collapse-plus h-[118px] join-item border-y border-base-300">
+                  <input type="radio" name="my-accordion-4" checked="checked" /> 
+                  <div class="collapse-title text-xl text-[#131318] font-bold">
+                    Our Equipment
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="w-[518px] lg:text-[16px] font-[Manrope] font-normal text-[#13131299]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus h-[75px] join-item border-y border-base-300">
+                  <input type="radio" name="my-accordion-4" /> 
+                  <div class="collapse-title text-xl text-[#131318] font-bold">
+                    Hockey Training
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus h-[75px] join-item border-y border-base-300">
+                  <input type="radio" name="my-accordion-4" /> 
+                  <div class="collapse-title text-xl text-[#131318] font-bold">
+                    Private Lessons
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus h-[75px] join-item border-y border-base-300">
+                  <input type="radio" name="my-accordion-4" /> 
+                  <div class="collapse-title text-xl text-[#131318] font-bold">
+                    Ski Touring
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus h-[75px] join-item border-y border-base-300">
+                  <input type="radio" name="my-accordion-4" /> 
+                  <div class="collapse-title text-xl text-[#131318] font-bold">
+                    Booking
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus h-[75px] join-item border-y border-base-300">
+                  <input type="radio" name="my-accordion-4" /> 
+                  <div class="collapse-title text-xl text-[#131318] font-bold">
+                    Pricings
+                  </div>
+                  <div class="collapse-content"> 
+                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </section>
+
 
     </main>
 
